fix spacing for sub trees

--- a/src/components/Tree/Tree_shim.css
+++ b/src/components/Tree/Tree_shim.css
@@ -5,6 +5,7 @@
   cursor: default;
 }
 .neo-treeview__sub-tree-item > ul {
+  display: block;
   margin-left: 1rem;
 }
 .neo-treeview__sub-tree-item div[role="button"] {
